# oauth2-broker

./: AGENTS.md  Cargo.toml  Makefile.toml  README.md
.github/workflows/: release.yml
examples/: client_credentials.rs  custom_transport.rs  start_authorization.rs  x_authorization.rs
src/: auth.rs  error.rs  ext.rs  flows.rs  http.rs  lib.rs  oauth.rs  obs.rs  provider.rs  store.rs
src/auth/: id.rs  scope.rs  token.rs
src/auth/token/: family.rs  record.rs  secret.rs
src/ext/: rate_limit.rs  request_signer.rs  token_lease.rs
src/flows/: auth_code_pkce.rs  client_credentials.rs  common.rs  refresh.rs
src/flows/auth_code_pkce/: session.rs
src/flows/refresh/: metrics.rs
src/obs/: metrics.rs  tracing.rs
src/provider/: descriptor.rs  strategy.rs
src/provider/descriptor/: builder.rs  grant.rs  quirks.rs
src/store/: file.rs  memory.rs
tests/: flows_auth_code_it.rs  flows_client_credentials_it.rs  flows_refresh_it.rs  mock_provider.rs  store_inmemory.rs  token_http_client_it.rs
