[package]
authors     = ["Xavier Lau <x@acg.box>"]
categories  = ["asynchronous", "authentication", "config", "network-programming", "web-programming::http-client"]
description = "Rust's turnkey OAuth 2.0 broker - spin up multi-tenant flows, CAS-smart token stores, and transport-aware observability in one crate built for production."
edition     = "2024"
keywords    = ["async", "broker", "oauth2", "reqwest", "token"]
license     = "GPL-3.0"
name        = "oauth2-broker"
readme      = "README.md"
repository  = "https://github.com/hack-ink/oauth2-broker"
version     = "0.1.2"

[profile.ci-dev]
incremental = false
inherits    = "dev"

[profile.ci-release]
inherits = "release"
lto      = true

[features]
default = ["reqwest"]
test    = []

[dependencies]
# crates.io
async-lock          = { version = "3.4" }
base64              = { version = "0.22" }
oauth2              = { version = "5.0", default-features = false }
parking_lot         = { version = "0.12" }
rand                = { version = "0.9" }
serde               = { version = "1.0", features = ["derive"] }
serde_json          = { version = "1.0" }
serde_path_to_error = { version = "0.1" }
sha2                = { version = "0.10" }
thiserror           = { version = "2.0" }
time                = { version = "0.3", features = ["macros", "parsing", "serde"] }
url                 = { version = "2.5" }
# crates.io optional
metrics = { version = "0.24", optional = true }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["charset", "http2", "rustls-tls"] }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
# crates.io
color-eyre = { version = "0.6" }
httpmock   = { version = "0.8", features = ["https"] }
tokio      = { version = "1.48", features = ["macros", "rt-multi-thread", "time"] }

[[example]]
name              = "client_credentials"
required-features = ["reqwest"]

[[example]]
name              = "start_authorization"
required-features = ["reqwest"]

[[example]]
name              = "x_authorization"
required-features = ["reqwest"]
